apps/mytenant/my-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api
  namespace: mytenant
  labels:
    app: my-api
spec:
  selector:
    app: my-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
