apps/mytenant/my-api/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-api
  namespace: istio-system
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - example.labci.com
  http:
    - match:
        - uri:
            prefix: "/my-api/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: my-api.mytenant.svc.cluster.local
            port:
              number: 3000
